Changes to upload to master:

Documentation:
	- boolean_path.hpp
	- node_path.hpp
	- random_generator.hpp
	- svector.hpp
	- xxgraph.hpp
	- uxgraph.hpp
	- uwgraph.hpp

Other changes:
	- boolean_path.cpp:
		Added several assertions.
		Added implementation of get_length() metho (oops).
	- node_path.cpp
		Added some assertions.
	- crandom_generator.cpp
		Implemented methods with empty body for binomial distributions.
	- definitions.hpp, xxgraph.hpp
		Moved definition of
			- node
			- neighbourhood
			- iterators
			- edge
		to file definitions.hpp

		'node' is now defined as a int32_t
	- xxgraph.hpp
		There was a method with type 'size_t' for a node index.
		Changed it to 'node' defintion.
	
	The change in the defintion of node from size_t to int32_t triggered
	several compilation errors in the 'debug' project (and so to the csn
	project). The files that had to be changed were:
	- graph_traversal/xudistances.cpp
	- metrics/centralities.cpp,.hpp
	- metrics/distance.cpp,.hpp
	- debug/debug.hpp