@@ -1,12 +1,19 @@
 #pragma once
 
-/// C++ includes
+// C++ includes
 #include <iostream>
 #include <fstream>
 
 namespace lgraph {
 namespace utils {
 
+/**
+ * @brief A class for a null stream
+ *
+ * The operator '<<' for any suitable type does not have
+ * any effect on it (nothing is displayed). The 'endl' modifier
+ * is also redefined to have no effect on the stream.
+ */
 class null_stream {
 	public:
 		void open(const char *, const std::ios_base::openmode& ) { }
@@ -27,6 +34,11 @@ class null_stream {
 		{ return *this; }
 };
 
+/**
+ * @brief A class for the cout stream
+ *
+ * A wrapper over the ostrem object cout.
+ */
 class cout_stream {
 	public:
 		void open(const char *, const std::ios_base::openmode& ) { }
@@ -51,6 +63,11 @@ class cout_stream {
 		}
 };
 
+/**
+ * @brief A class for the cerr stream
+ *
+ * A wrapper over the ostrem object cerr.
+ */
 class cerr_stream {
 	public:
 		void open(const char *, const std::ios_base::openmode& ) { }
@@ -75,21 +92,72 @@ class cerr_stream {
 		}
 };
 
+/**
+ * @brief Class for message display
+ *
+ * Singleton class to centralise the displaying of messages either
+ * to the standard or error output, or to a file. For example, during
+ * development it is useful to have "couts" to display the values of
+ * variables, to show the progress of algorithms, ...
+ *
+ * Once the development is complete, one may want to get rid of these
+ * couts by deleting them. This may be a bad idea since bugs may be
+ * discovered later in the development of the project. To avoid their
+ * deletion/comment-out, the logger can be used in the following way:
+ *
+ *		logger<cout_stream>& LOG = logger<cout_stream>::get_logger();	// declare the object\n
+ *		LOG.log() << "message 1" << endl;	// Use it	\n
+ *		LOG.log() << "message 2" << endl;				\n\n
+ *
+ * Once we are not interested in displaying messages anymore, change
+ * the declaration of the object to:
+ *
+ *	logger<null_stream>& LOG = logger<null_stream>::get_logger();
+ *
+ * The other calls displaying "message *" will have no effect. There
+ * is only one instance of this class for a cout_stream, one for a
+ * cerr_stream, one for a null_stream, and another for a stream to
+ * a file.
+ *
+ * @param out_stream The ofstream type or the @ref null_stream,
+ * @ref cout_stream, @ref cerr_stream.
+ */
 template<class out_stream = std::ofstream>
 class logger {
 	private:
+		/// The stream object to output the strings to
 		out_stream fout;
+		/// In case of an stream to a file, is it opened?
 		bool opened;
 		
+		/**
+		 * @brief Empty constructor
+		 *
+		 * Made private to make this class a singleton
+		 */
 		logger() {
 			opened = false;
 		}
 		
 	public:
+		/**
+		 * @brief Returns the stream to output information to
+		 *
+		 * This works exactly like the 'cout' and 'cerr' ostream
+		 * classes. All objects passed to this using '<<' must
+		 * implement this operator.
+		 */
 		out_stream& log() {
 			return fout;
 		}
 		
+		/**
+		 * @brief Returns the only instance of this class
+		 * @param o In case of using a stream to a file (ofstream),
+		 * indicate the name of the file.
+		 * @return Returns the only instance of this class of the
+		 * indicated type in the template parameter.
+		 */
 		static logger& get_logger(const std::string& o = "log.txt") {
 			static logger<out_stream> L;
 			
@@ -101,7 +169,9 @@ class logger {
 			return L;
 		}
 		
+		/// Deleted copy-constructor
 		logger (const logger& L)			= delete;
+		/// Deleted assignation operator
 		void operator= (const logger& L)	= delete;
 };
 
